src/index.scss
.documentation-sidebar {
  width: 250px;
  background: white;
  border-right: 1px solid #eee;
  height: 100vh;
  overflow-y: auto;
  position: fixed;
  padding-bottom: 1rem;
  z-index: 5;
  .list {
    list-style-type: none;
    h4 {
      padding: 0.875rem 1.5rem;
      text-transform: capitalize;
      border-bottom: 1px solid #eee;
      color: rgb(187, 187, 187);
      margin-top: 0.75rem;
      font-size: 0.85em;
      user-select: none;
      cursor: default;
    }
    a {
      text-decoration: none;
      background-color: none;
      padding: 0.875rem 1.5rem;
      display: block;
      color: #333;
      font-size: 0.875em;
      user-select: none;
      &:hover {
        color: #006aff;
      }
    }
  }
}

.documentation-page {
  display: flex;
  .documentation-content-wrapper {
    flex: 1;
    margin-left: 250px;
    .documentation-content {
      padding: 3rem;
    }
  }
}

.start-page {
  animation: fadeIn 1s ease-in-out;
  @keyframes fadeIn {
    from {
      opacity: 0;
    }
    to {
      opacity: 1;
    }
  }

  header {
    min-height: 100vh;
    margin: 0 auto;
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    flex-direction: column;
    background: #006aff;

    code {
      border: 1px solid white;
      color: white;
      padding: 0.5rem 0.75rem;
      border-radius: 3px;
      cursor: pointer;
      opacity: 0.5;
      &:hover {
        opacity: 1;
      }
      &:before {
        content: "$";
        user-select: none;
        margin-right: 0.5rem;
      }
    }

    .header-content {
      max-width: 1000px;
      padding: 0 2rem;
      img {
        max-width: 150px;
      }
      h1 {
        color: white;
        font-size: 3em;
      }
      p {
        color: white;
        font-size: 3em;
        font-size: 1.2em;
        max-width: 600px;
      }
      #documentation-button {
        color: white;
        &:hover {
          color: #333;
          background: white;
          border-color: white;
          i {
            opacity: 1;
          }
        }
        i {
          opacity: 0.5;
        }
      }
    }
  }
}

